--- a/sierpinski.html
+++ b/sierpinski.html
@@ -3,7 +3,7 @@
   <head>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <link rel="stylesheet" type="text/css" href="sierpinski.css">
-    <link href="https://github.com/hiteshlala/hiteshlala.github.io/blob/master/images/favicon-16x16.png" rel="icon" type="image/x-icon" />
+    <link href="https://github.com/hiteshlala/hiteshlala.github.io/images/favicon-16x16.png" rel="icon" type="image/x-icon" />
 
   </head>
   <body>
