--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="simg.js"></script>
     <link rel="stylesheet" type="text/css" href="sierpinski.css">
+     <link href="https://github.com/hiteshlala/hiteshlala.github.io/images/favicon-16x16.png" rel="icon" type="image/x-icon" />
+
   </head>
   <body>
     <div class="heading">Sierpinski Triangles</div>
