--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="simg.js"></script>
     <link rel="stylesheet" type="text/css" href="sierpinski.css">
-     <link href="https://github.com/hiteshlala/hiteshlala.github.io/images/favicon-16x16.png" rel="icon" type="image/x-icon" />
+     <link href="https://github.com/hiteshlala/hiteshlala.github.io/blob/master/images/favicon-16x16.png" rel="icon" type="image/x-icon" />
 
   </head>
   <body>
