use local libraries

--- a/sierpinski.html
+++ b/sierpinski.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="sierpinski.css">
-    <link href="https://github.com/hiteshlala/hiteshlala.github.io/images/favicon-16x16.png" rel="icon" type="image/x-icon" />
+    <link href="/images/favicon-16x16.png" rel="icon" type="image/x-icon" />
 
   </head>
   <body>
@@ -19,7 +19,7 @@
     <svg class="board" width="1200" height="600"></svg>
     <div>
     
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="d3.min.js" charset="utf-8"></script>
     <script src='sierpinski.js'></script>
   
     
