--- a/sierpinski.html
+++ b/sierpinski.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="jquery.min.js"></script>
     <script src="simg.js"></script>
     <link rel="stylesheet" type="text/css" href="sierpinski.css">
   </head>
@@ -19,7 +19,7 @@
     <svg class="board" width="850" height="600" style='background-color: white;'></svg>
     </div>
     
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="d3.min.js" charset="utf-8"></script>
     <script src='sierpinski.js'></script>
   
     
