--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="jquery.min.js"></script>
     <script src="simg.js"></script>
     <link rel="stylesheet" type="text/css" href="sierpinski.css">
      <link href="http://hiteshlala.github.io/images/favicon-16x16.png" rel="icon" type="image/x-icon" />
@@ -21,7 +21,7 @@
     <svg class="board" width="850" height="600" style='background-color: white;'></svg>
     </div>
     
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="d3.min.js" charset="utf-8"></script>
     <script src='sierpinski.js'></script>
   
     
